--- a/css/style.css
+++ b/css/style.css
@@ -126,4 +126,67 @@ img {
 
 /************************************************
     SOLUZIONE RESPONSIVE
- ************************************************/
+ ************************************************
+
+ /* versione mobile */
+
+ @media screen and (max-width: 480px) {
+
+    .row {
+        display: block;
+    }
+    
+    .container {
+        width: 90%;
+        padding: 5px;
+    }
+
+    .col {
+        margin: 0 auto;
+    }
+
+    .lessons .col {
+        width: 90%;
+    }
+
+    .steps .col {
+        width: 90%;
+    }
+
+    .why-us .col-right {
+        width: 90%;
+    }
+
+    .why-us .col-left {
+        width: 90%;
+        margin-bottom: 50px;
+        
+    }
+
+    .card {
+        margin-bottom: 50px;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 1.8rem;
+    }
+
+    p li {
+        text-align: left;
+    }
+
+ }
+
+ /* versione tablet */
+
+ @media screen and (max-width: 768px) and (min-width: 481) {
+    
+ }
