--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************
 
+ /* versione tablet */
+
+ @media screen and (max-width: 768px) {
+    
+ }
+
  /* versione mobile */
 
  @media screen and (max-width: 480px) {
@@ -137,7 +143,7 @@ img {
     }
     
     .container {
-        width: 90%;
+        width: 100%;
         padding: 5px;
     }
 
@@ -146,19 +152,19 @@ img {
     }
 
     .lessons .col {
-        width: 90%;
+        width: 100%;
     }
 
     .steps .col {
-        width: 90%;
+        width: 100%;
     }
 
     .why-us .col-right {
-        width: 90%;
+        width: 100%;
     }
 
     .why-us .col-left {
-        width: 90%;
+        width: 100%;
         margin-bottom: 50px;
         
     }
@@ -183,10 +189,29 @@ img {
         text-align: left;
     }
 
+    .lessons .col img {
+        margin-top: 15px;
+        width: 90%;
+        height: 260px;
+    }
+
+    .steps .col img {
+        margin-top: 15px;
+        width: 90%;
+        height: 260px;    
+    }
+
+    .text {
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+
+    p {
+        font-size: 1.2rem;
+    }
+
  }
 
  /* versione tablet */
 
- @media screen and (max-width: 768px) and (min-width: 481) {
-    
- }
+ 
