--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,16 @@ img {
  /* versione tablet */
 
  @media screen and (max-width: 768px) {
+
+    .row {
+        display: flex;
+        justify-content: center;
+    }
+
+    .container {
+        width: 100%;
+        padding: 5px;
+    }
     
  }
 
@@ -211,7 +221,3 @@ img {
     }
 
  }
-
- /* versione tablet */
-
- 
